# ecom

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 331aa3f16e80_create_orders_table.py  aa84f7cec6bb_init.py
app/: main.py
app/api/orders/: router.py  service.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: enums.py  order.py
app/schemas/: order.py
docs/v1/: er_diagram.txt  flow.txt  hld.md  lld.md
