[tool.poetry]
name = "ecom"
version = "0.1.0"
description = "a ecom project built to learn distributed systems"
authors = ["irohanrajput <itusharsingh27@gmail.com>"]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.46"
alembic = "^1.18.1"
aiosqlite = "^0.22.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
